<resources>
    <string name="app_name">5Geigir</string>
    <string name="welcome_title">Welcome to 5Geigir</string>
    <string name="welcome_msg">With 5Geigir you will be able to measure the electromagnetic emissions of the mobile radio signals of your surroundings.</string>
    <string name="welcome_btn">Next</string>
    <string name="main_getStarted">Start measuring your environment</string>
    <string name="main_measureStart">Measure</string>
    <string name="main_measureStop">Stop</string>
    <string name="permission_title">Required permissions</string>
    <string name="permission_msg">5Geigir needs access to your radio signals, location and notifications in order to start working, pleace grant these permissions to measure the electromagnetic field. The use of these can be later modified from the settings menu.</string>
    <string name="menu_settingsOption">Settings</string>
    <string name="pref_dataManagement">Data management</string>
    <string name="prefs_dataExpiration_title">Data expiration</string>
    <string name="prefs_dataExpiration_desc">Your history data will be deleted after a week</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_theme_systemDefault">Default theme</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_lang_english">English</string>
    <string name="pref_lang_spanish">Spanish</string>
    <string name="pref_lang_title">Language</string>
    <string name="pref_lang_systemDefault">Default language</string>
    <string name="pref_token_title">Device token</string>
    <string name="pref_token_desc">Use this code in 5Geo to visualize your data</string>
    <string name="main_newMeasures">new measurements</string>
    <string name="loading">Loading</string>
    <string name="measurement_cId_title">Cell ID</string>
    <string name="measurement_ubiLat_title">Latitude</string>
    <string name="measurement_ubiLong_title">Longitude</string>
    <string name="char_lt"><![CDATA[<]]></string>
    <string name="char_gt"><![CDATA[>]]></string>
    <string name="permission_btn">Grant</string>
    <string name="dialog_permissions_title">Permissions required</string>
    <string name="dialog_permissions_desc">5Geigir requires some permissions to measure, please grant them before starting</string>
    <string name="dialog_permissions_accept">Grant</string>
    <string name="dialog_permissions_deny">Deny</string>
    <string name="dialog_permissions_cancelled">The measurement has been cancelled</string>
    <string name="measurement_freq_title">Frequency</string>
    <string name="measurement_type_title">Network type</string>
    <string name="lastMeasurement_title">Last measurement</string>
    <string name="currentMeasurement_cont">New measurements</string>
    <string name="notification_measuring_title">Measuring signals</string>
    <string name="notification_measuring_desc">5Geigir is measuring the EM field</string>
    <string name="pref_silent_title">Silent mode</string>
    <string name="pref_silent_desc">Disable the notifications</string>
    <string name="pref_private_title">Private mode</string>
    <string name="pref_private_desc">Location data will not be stored</string>
    <string name="pref_appearance">Appearance</string>
    <string name="menu_refreshOption">Refresh</string>
</resources>