<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Aspecto">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/prefs_theme"
            android:entryValues="@array/prefs_theme"
            android:key="theme"
            android:title="@string/pref_theme_title" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/prefs_language"
            android:entryValues="@array/prefs_language"
            android:key="language"
            android:title="@string/pref_lang_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="silent_mode"
            android:title="@string/pref_silent_title"
            app:summary="@string/pref_silent_desc" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_dataManagement">

        <!--CheckBoxPreference  Currently unused feature
            android:defaultValue="false"
            android:key="data_expiration"
            android:summary="@string/prefs_dataExpiration_desc"
            android:title="@string/prefs_dataExpiration_title" /-->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="private_mode"
            android:title="@string/pref_private_title"
            app:summary="@string/pref_private_desc" />
    </PreferenceCategory>

    <!-- Currently unused feature -->
    <Preference
        android:key="token"
        android:selectable="false"
        android:persistent="false"
        android:title="@string/pref_token_title"
        android:summary="@string/pref_token_desc"/>
</PreferenceScreen>